--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.1",
+    "@types/chart.js": "^2.7.55",
+    "@types/jquery": "^3.3.30",
+    "angular-popper": "^2.0.1",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "ngx-bootstrap": "^5.0.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
