--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,13 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": [             
               "src/styles.scss"
             ],
-            "scripts": [ ]
+            "scripts": [  
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
