--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "jquery": "^3.4.1",
+    "jshint": "^2.10.2",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.0.0",
     "popper.js": "^1.15.0",
