--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.8.0",
     "jquery": "^3.4.1",
     "jshint": "^2.10.2",
+    "lite-server": "^2.5.3",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.0.0",
     "popper.js": "^1.15.0",
